<resources>
    <string name="app_name">Security Voice</string>
    <string name="title_travel">Viajar</string>
    <string name="title_security">Segurança</string>
    <string name="title_profile">Perfil</string>

    <string name="userSign_question">Quem é você?</string>
    <string name="userSign_respMot">Motorista</string>
    <string name="userSign_respPass">Passageiro</string>

    <string name="login_mainTitle">Acesse</string>
    <string name="login_subTitle">Com número de celular ou e-mail e senha.</string>
    <string name="login_editTextmainIdentificator">Digite seu e-mail ou número de telefone</string>
    <string name="login_editTextPassword">Digite sua senha</string>
    <string name="login_checkBox">Lembrar de mim</string>
    <string name="login_forgotPassword">Esqueci minha senha</string>
    <string name="login_buttonRegister">Cadastrar</string>
    <string name="login_buttonLogin">Acessar</string>

    <string name="registerPassenger_title">Criar uma nova conta para Passageiro</string>
    <string name="registerPassenger_nameEditText">Digite seu nome</string>
    <string name="registerPassenger_lastNameEditText">Digite seu sobrenome</string>
    <string name="registerPassenger_registerButton">Continuar</string>

    <string name="registerDriver_title">Criar uma nova conta para Motorista</string>
    <string name="registerDriver_nameEditText">Digite seu nome</string>
    <string name="registerDriver_lastNameEditText">Digite seu sobrenome</string>
    <string name="registerDriver_cpfEditText">Digite seu CPF</string>
    <string name="registerDriver_rgEditText">Digite seu RG</string>
    <string name="registerDriver_dateTitle">Data de Nascimento</string>
    <string name="registerDriver_genderTitle">Gênero</string>
    <string name="registerDriver_genderFemale">Feminino</string>
    <string name="registerDriver_genderMale">Masculino</string>
    <string name="registerDriver_mainIdentificator">Digite seu e-mail ou número de telefone</string>
    <string name="registerDriver_password">Digite uma senha</string>
    <string name="registerDriver_registerButton">Cadastrar</string>
    <string name="registerDriver_alreadyHaveAccount">Já tenho uma conta</string>

    <string-array name="registerDriver_dayDateSpinnerOptions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="registerDriver_monthDateSpinnerOptions">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string-array name="registerDriver_yearDateSpinnerOptions">
        <item>1900</item>
        <item>1901</item>
        <item>1902</item>
        <item>1903</item>
        <item>1904</item>
        <item>1905</item>
        <item>1906</item>
        <item>1907</item>
        <item>1908</item>
        <item>1909</item>
        <item>1910</item>
        <item>1911</item>
        <item>1912</item>
        <item>1913</item>
        <item>1914</item>
        <item>1915</item>
        <item>1916</item>
        <item>1917</item>
        <item>1918</item>
        <item>1919</item>
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string name="travel_travelButton">Viajar</string>

    <string name="travelList_refreshButton">Atualizar</string>

    <string name="security_securityTitleFragment">Mecanismos de Segurança</string>
    <string name="security_securityVoiceButton">SecurityVoice: Fale pela sua segurança</string>
    <string name="security_uAjudaButton">U-Ajuda: conte com mais verificações de segurança</string>
    <string name="security_uCódigo">Usar verificação de U-código</string>
    <string name="security_uÁudio">U-Áudio</string>
    <string name="security_uAcompanha">U-Acompanha:compartilhamento de viagem</string>

    <string name="securityVoiceConfiguration_Title">Configuração do SecurityVoice</string>
    <string name="securityVoiceConfiguration_emergencyCode">Fala de Emergência</string>
    <string name="securityVoiceConfiguration_emergencyCodeDescription">Usada para acionar a central Uber e as autoridades em casos de emergência policial.</string>
    <string name="securityVoiceConfiguration_uAudioExecution">Fala para acionar U-Áudio</string>
    <string name="securityVoiceConfiguration_uAudioExecutionDescription">Usado para gravar a viagem para denúncias de abusos verbais.</string>
    <string name="securityVoiceConfiguration_commandVoice">Comandos por voz</string>
    <string name="securityVoiceConfiguration_CodeButton">Clique para gravar</string>
    <string name="securityVoiceConfiguration_backButton">Voltar</string>

    <string name="profile_profileInformations">Informações da Conta</string>
    <string name="profile_profileActivity">Atividade</string>
    <string name="profile_profileConfigurations">Configurações</string>
    <string name="profile_profileExit">Sair</string>

    <string name="profile_AccountInformation_Title">Registro de Usuário</string>
    <string name="profile_AccountInformation_cancelButton">Voltar</string>
    <string name="profile_AccountInformation_updateButton">Atualizar</string>
    <string name="profile_AccountInformation_deleteButton">Deletar Conta</string>

    <string name="mapFragment_passenger_waitingDriver">Aguardando motorista...</string>
    <string name="mapFragment_passenger_travelAccepted">Viagem aceita!</string>
    <string name="mapFragment_passenger_travelAccepted_plate">BJT-8866</string>
    <string name="mapFragment_passenger_travelAccepted_carModel">Chevrolet-Spin</string>
    <string name="mapFragment_passenger_travelAccepted_carColor">Verde</string>
    <string name="mapFragment_driver_acceptingTravel_button">Encerrar Viagem</string>
    <string name="mapFragment_button_requestTravel">Solicitar Viagem</string>
    <string name="travel_cancelTravel">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>