<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.fecap.pi.securityvoice.securityvoice.ui.system.AccountInformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="36sp"
            android:autoSizeMinTextSize="18sp"
            android:autoSizeTextType="uniform"
            android:autoSizeStepGranularity="2sp"
            android:text="@string/profile_AccountInformation_Title"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout14"
            android:layout_width="160dp"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_min="25dp"
            app:layout_constraintHeight_max="60dp"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittexttemplate"
                android:hint="@string/registerDriver_nameEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout13"
            android:layout_width="160dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_min="25dp"
            app:layout_constraintHeight_max="60dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout14">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileLastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittexttemplate"
                android:hint="@string/registerDriver_lastNameEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout15"
            android:layout_width="161dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_min="25dp"
            app:layout_constraintHeight_max="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout14">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileCPFEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittexttemplate"
                android:hint="@string/registerDriver_cpfEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout16"
            android:layout_width="160dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_min="25dp"
            app:layout_constraintHeight_max="60dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileRGEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittexttemplate"
                android:hint="@string/registerDriver_rgEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/AccountInformation_monthDateSpinner"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittexttemplate"
            android:entries="@array/registerDriver_monthDateSpinnerOptions"

            app:layout_constraintBaseline_toBaselineOf="@+id/AccountInformation_dayDateSpinner"
            app:layout_constraintEnd_toStartOf="@+id/AccountInformation_yearDateSpinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/AccountInformation_dayDateSpinner" />

        <Spinner
            android:id="@+id/AccountInformation_dayDateSpinner"
            android:layout_width="124dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:background="@drawable/login_edittexttemplate"
            android:entries="@array/registerDriver_dayDateSpinnerOptions"
            app:layout_constraintEnd_toStartOf="@+id/AccountInformation_monthDateSpinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Spinner
            android:id="@+id/AccountInformation_yearDateSpinner"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittexttemplate"

            android:entries="@array/registerDriver_yearDateSpinnerOptions"
            app:layout_constraintBaseline_toBaselineOf="@+id/AccountInformation_monthDateSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/AccountInformation_monthDateSpinner" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/registerDriver_genderTitle"
            android:textSize="18sp"
            android:autoSizeTextType="uniform"
            android:autoSizeStepGranularity="2dp"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AccountInformation_dayDateSpinner" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/registerDriver_dateTitle"
            android:textSize="18sp"
            android:autoSizeTextType="uniform"
            android:autoSizeStepGranularity="2dp"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout15" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/login_edittexttemplate"
                android:text="@string/registerDriver_genderFemale" />

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/login_edittexttemplate"
                android:text="@string/registerDriver_genderMale" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainIdentificatorProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittexttemplate"
                android:hint="@string/registerDriver_mainIdentificator" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittexttemplate"
                android:hint="@string/registerDriver_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/login_registerbutton"
            android:onClick="cancelButton"
            android:text="@string/profile_AccountInformation_cancelButton"
            app:layout_constraintEnd_toStartOf="@+id/updateButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_registerbutton"
            android:text="@string/profile_AccountInformation_updateButton"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/accountinformation_deleteaccountbutton"
            android:text="@string/profile_AccountInformation_deleteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>